# projects

./: .gitignore  README.md
CommonObjects/: 3DRenderer.h  Bessel.cpp  Bmpview.cpp  Bmpview.h  Calculations.cpp  ComplexMath.cpp  Direct3D.cpp  Direct3D.h  DragTreeView.cpp  DragTreeView.h  DynamicLibrary.cpp  Forms.h  GridCtrl.cpp  IcmpSockets.cpp  IpSockets.cpp  IpSockets.h  IpThreadedSockets.h  MibParser.cpp  MibTreeCtrl.h  NetBiosSocket.h  OpenGLEditor.cpp  OpenGLRenderer.cpp  OpenGLView.cpp  Port.cpp  Port.h  Rip.cpp  SnifferSockets.h  SnmpHelper.cpp  Sockets.h  StdAfx.cpp  TcpSockets.h  TcpThreadSocket.h  TelnetSockets.h  Terminal.h  ThreadObject.cpp  Udp.cpp  Udp.h  colorbutton.cpp  snmp_stuff.cpp  snmp_stuff.h
Elsov/ServiceSoft/: ServiceSoft.dsw
Elsov/SkyFrame/: SkyFrame.dsw
Forex/: CurrencyPair.cpp  CurrencyPair.h  Forex.dsw  Misc.cpp  Misc.h  NpbSession.cpp  NpbSession.h  amfxapi.h  amfxapicxx.cpp  amfxapicxx.h
Forex/MoneyMaker/: MoneyMaker.cpp  MoneyMaker.dsp  ReadMe.txt  StdAfx.cpp  StdAfx.h
Forex/PriceStore/: PriceStore.dsp  main.cpp
Gena/: Gena.dsw
Gena/Antenna/: Antenna.cpp  Antenna.dsp  ReadMe.txt  StdAfx.cpp  StdAfx.h
Gena/Litho/: Litho.aps  Litho.clw  Litho.cpp  Litho.dsp  Litho.h  Litho.rc  LithoDoc.cpp  LithoDoc.h  LithoFrame.cpp  LithoFrame.h  LithoRenderer.cpp  LithoRenderer.h  LithoView.cpp  LithoView.h  ProgressDlg.h  ReadMe.txt  Resource.h  SettingsDialog.cpp  SettingsDialog.h  StdAfx.cpp  StdAfx.h
Guy/: Guy.dsw
SandBox/: .gitignore
SandBox/TeloModem/lte-manager/: CMakeLists.txt  config.cpp  config.h  const.cpp  const.h  curl-lib.cpp  curl-lib.h  fw-upgrade.cpp  fw-upgrade.h  ip.h  json.cpp  json.h  kafka-rest-proxy.cpp  kafka-rest-proxy.h  log.cpp  log.h  lte-manager.cpp  lte-parameters.cpp  lte-parameters.h  mdm.cfg  messaging-https.cpp  messaging-https.h  misc.cpp  misc.h  modem-gtc.cpp  modem-gtc.h  myxid.cpp  myxid.h  serial-connection.cpp  serial-connection.h  sniffer-pcap.cpp  sniffer-pcap.h  sniffer-raw-sockets.cpp  sniffer-raw-sockets.h  sniffer.cpp  sniffer.h  traffic-counter.cpp  traffic-counter.h  verbosity.cpp  verbosity.h  (+2 more)
SandBox/TeloModem/lte-manager/unit_tests/: CMakeLists.txt  lte-manager-unit-tests.cpp
SandBox/TeloModem/lte-status/: CMakeLists.txt  lte-status.cpp
SandBox/TeloModem/serial-connection/: CMakeLists.txt  json.cpp  json.h  modem-gct.cpp  modem-gct.h  modem-gtc.cpp  modem-gtc.h  serial-connection.cpp  serial-connection.h
SandBox/TrafficCounter/: CMakeLists.txt  counter.cpp  counter.h  ip.h  main.cpp  misc.cpp  misc.h  portable.cpp  portable.h  sniffer.cpp  sniffer.h
SandBox/common/portable/: CMakeLists.txt  portable.cpp  portable.h  rgba.h  text_string.cpp  thread.cpp  thread.h  types.h
SandBox/telnet-client/: CMakeLists.txt  tcp-client.cpp  tcp-client.h  tcp-server.cpp  tcp-server.h  tcp.cpp  tcp.h  telnet-client.cpp  telnet-gtc.cpp  telnet-gtc.h  telnet-telo-le.cpp  telnet-telo-le.h  telnet.cpp  telnet.h
SandBox/udpgen/: CMakeLists.txt  main.cpp
Z-Planner/: App.config  License.cs  Program.cs  Z-Planner.csproj  ZPlannerManager.cs  ZPlannerSingleInstanceManager.cs
new_projects/: CMakeLists.txt
new_projects/maint/.svn/: all-wcprops  entries
new_projects/maint/cmake/: build_types.cmake  qtutils.cmake  version.cmake
new_projects/maint/cmake/.svn/: all-wcprops  entries
new_projects/maint/cmake/.svn/text-base/: build_types.cmake.svn-base
new_projects/src/: CMakeLists.txt
new_projects/src/common/: .gitignore  CMakeLists.txt
new_projects/src/common/calc/: CMakeLists.txt  calc.h
new_projects/src/common/geometry2d/: CMakeLists.txt
new_projects/src/common/network/: CMakeLists.txt  hardware.cpp  icmp.h  ip.cpp  ip.h  raw.cpp  raw.h  tcp.cpp  tcp.h  udp.cpp  udp.h
new_projects/src/common/objects/: AnimatedIcon.cpp  AutoRepeatBitmapButton.h  Bars.cpp  Bessel.h  Bmp.cpp  Calculations.h  ComplexMath.h  Direct3DView.cpp  ExTreeCtrl.h  ExTreeView.cpp  ExTreeView.h  Geometry2D.h  GridCtrl.h  GridDropTarget.h  IPHlpApi.h  ITBrowseForFolderDialog.cpp  ITBrowseForFolderDialog.h  IcmpSockets.h  InPlaceEdit.h  InPlaceList.cpp  IpSockets.cpp  IpSockets.h  IpThreadedSockets.cpp  NetworkMisc.cpp  NetworkMisc.h  ObjLists.cpp  ObjLists.h  OpenGLRenderer.h  Port.h  Portable.cpp  Portable.h  RandomGen.h  Registry.cpp  Registry.h  Rip.h  SNMP_stuff.cpp  SnifferSockets.cpp  SnmpHelper.cpp  SnmpHelper.h  StdAfx.h  (+12 more)
new_projects/src/common/ogl/: CMakeLists.txt  opengl_2d_chart.h  opengl_2d_editor.cpp  opengl_3d_widget.cpp  opengl_3d_widget.h  opengl_widget.cpp  opengl_widget.h
new_projects/src/common/portable/: CMakeLists.txt  portable.h  rgba.cpp  text_string.h
new_projects/src/common/random/: CMakeLists.txt  random.cpp
new_projects/src/granular/: CMakeLists.txt
new_projects/src/granular/gransim2d/: CMakeLists.txt
new_projects/src/granular/gransim2d/engine/: CMakeLists.txt  design_text_string.cpp  design_text_string.h  engine.h  geometry2d_object.cpp  geometry2d_object.h  global.cpp  global.h  gransim2d_design.cpp  gransim2d_design.h  gransim2d_object.cpp  gransim2d_object.h  gui_api.h  material.cpp  material.h  materialized_object.cpp  materialized_object.h  particle2d.cpp  particle2d.h  particle_shape_vertex.cpp  particle_shape_vertex.h  particle_source.cpp  particle_source.h  particle_type.cpp  particle_type.h  simcell_2d.cpp  simcell_2d.h  text_const.cpp  text_const.h  widget_desc.h
new_projects/src/granular/gransim2d/gransim2d_console/: CMakeLists.txt  main.cpp
new_projects/src/granular/gransim2d/gransim2d_gui/: CMakeLists.txt  gransim2d_renderer.cpp  gransim2d_renderer.h  main_statusbar.cpp  main_statusbar.h  main_window.cpp  main_window.h  projectview.cpp  projectview.h
new_projects/src/networking/: .gitignore  CMakeLists.txt
new_projects/src/networking/smartping/: CMakeLists.txt  smartping.cpp
new_projects/src/networking/udpgen/: CMakeLists.txt  udpgen.cpp
new_projects/src/networking/udplistener/: CMakeLists.txt  udplistener.cpp
new_projects/src/test/: CMakeLists.txt
new_projects/src/test/ogl3d_test/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
(+1325 files in other folders)
