cmake_minimum_required(VERSION 2.8)

project(TrafficCounter)

INCLUDE_DIRECTORIES("../common")

SET (NETWORK_SRCS_DIR "../common/network")
SET (NETWORK_SRCS
    ${NETWORK_SRCS_DIR}/ip.cpp
    ${NETWORK_SRCS_DIR}/misc.cpp
    ${NETWORK_SRCS_DIR}/raw.cpp
    ${NETWORK_SRCS_DIR}/sniffer.cpp
    ${NETWORK_SRCS_DIR}/udp.cpp
 )

IF (WIN32)
SET (NETWORK_SRCS
    ${NETWORK_SRCS}
    ${NETWORK_SRCS_DIR}/IpHelper.cpp
)
ENDIF (WIN32)


SET (PORTABLE_SRCS_DIR "../common/portable")
SET (PORTABLE_SRCS
    ${PORTABLE_SRCS_DIR}/portable.cpp
)

SET (SRCS
    ${NETWORK_SRCS}
    ${PORTABLE_SRCS}
    main.cpp
)

IF (WIN32)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOS_WINDOWS -DSOCKETS_WSA")
ELSEIF (UNIX)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOS_UNIX -DSOCKETS_BSD")
ENDIF(UNIX)
#C++11 support
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

IF (WIN32)
  TARGET_LINK_LIBRARIES(TrafficCounter wsock32 ws2_32 iphlpapi)
ENDIF(WIN32)

SET(CMAKE_EXE_LINKER_FLAGS " -static")
