CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(udpgen)

INCLUDE_DIRECTORIES("../common")

SET (NETWORK_SRCS_DIR "../common/network")
SET (NETWORK_SRCS
    ${NETWORK_SRCS_DIR}/ip.cpp
    ${NETWORK_SRCS_DIR}/misc.cpp
    ${NETWORK_SRCS_DIR}/udp.cpp
)

SET (PORTABLE_SRCS_DIR "../common/portable")
SET (PORTABLE_SRCS
    ${PORTABLE_SRCS_DIR}/portable.cpp
)

SET (SRCS
    ${NETWORK_SRCS}
    ${PORTABLE_SRCS}
    main.cpp
)

IF (WIN32)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOS_WINDOWS -DSOCKETS_WSA")
ENDIF(WIN32)
IF (UNIX)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOS_UNIX -DSOCKETS_BSD")
ENDIF(UNIX)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

#TARGET_LINK_LIBRARIES (udpgen
#                      network
#                      portable
#)


