## \file network/CMakeLists.txt
#

PROJECT(network)


IF (WIN32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOS_WINDOWS -DSOCKETS_WSA")
ENDIF(WIN32)

IF (UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOS_UNIX -DSOCKETS_BSD")
ENDIF(UNIX)

IF(${CMAKE_SYSTEM_NAME} MATCHES SunOS|Solaris)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOS_SOLARIS")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES SunOS|Solaris)


INCLUDE_DIRECTORIES("..")

SET (NETWORK_SRCS
    hardware.cpp
    icmp.cpp
    ip.cpp
    raw.cpp
    tcp.cpp
    misc.cpp
    udp.cpp
)


ADD_LIBRARY (network
    ${NETWORK_SRCS}
)

#socket libs
SET(SOCKET_LIBRARIES)
IF(${CMAKE_SYSTEM_NAME} MATCHES SunOS|Solaris)
   SET(SOCKET_LIBRARIES ${SOCKET_LIBRARIES} socket nsl)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES SunOS|Solaris)

TARGET_LINK_LIBRARIES (network
                      ${SOCKET_LIBRARIES}
)



# EOF CMakeLists.txt
